Day4/wordpress-with-configmaps-and-secrets/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc-jegan  #Replace 'jegan' with your name
      containers:
      - name: mysql
        image: mysql:latest
        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
