Day4/wordpress-with-configmaps-and-secrets/wordpress-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
      - name: wordpress-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc-jegan  #Replace 'jegan' with your name

      containers:
      - name: wordpress
        image: wordpress:php8.2

        imagePullPolicy: IfNotPresent

        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html/
