Day4/wordpress-with-configmaps-and-secrets/wordpress-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

  selector:
    app: wordpress

  type: LoadBalancer
